# simple-dmpnn

./: .gitignore  LICENSE  README.md  demo_inference_script.py  demo_train_script.py  pyproject.toml  requirements.txt
checkpoints/: dmpnn_regressor.pt  imdb_binary_dmpnn.pt
dmpnn/: __init__.py  adapters.py  graph_utils.py  model.py  synthetic.py  training.py
examples/: demo_imdb_binary.py  demo_inference_script.py  demo_train_script.py  synthetic_graph_gen.py
notebooks/: demo.ipynb  implementation_walkthrough.ipynb  profile_dmpnn_training.ipynb  testing.ipynb
