[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-dmpnn"
version = "0.1.0"
description = "A simple PyTorch implementation of a directed message passing neural network."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Michael Montemurri" },
]
dependencies = [
    "torch",
]

[project.optional-dependencies]
pyg = [
    "torch-geometric",
]
dev = [
    "torch-geometric",
    "numpy",
    "networkx",
    "matplotlib",
]

[project.urls]
Repository = "https://github.com/michaelmontemurri/simple-dmpnn"

[tool.setuptools.packages.find]
include = ["dmpnn*"]
